fix: refactoring tests in the infrastructure folder